--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="http://sql.900jit.com/static/bootstrap/css/bootstrap.min.css">
-</head>
-<body>
-  <div id="app"></div>
-  <script src="/src/index.tsx" type="module"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>sqlpad</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="/src/index.tsx" type="module"></script>
+  </body>
 </html>
